added raspian ros stretch image

--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -61,7 +61,7 @@ RUN rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_VERSION -r 
 # build catkin workspace
 RUN apt-get install -y dpkg
 
-RUN dpkg -i python-catkin-pkg
+# RUN dpkg -i python-catkin-pkg
 RUN dpkg -i python-catkin-pkg-modules
 
 RUN ./src/catkin/bin/catkin_make_isolated --install -DCMAKE_BUILD_TYPE=Release --install-space /opt/ros/$ROS_VERSION
