added raspian ros stretch image

--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -69,11 +69,11 @@ RUN rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_VERSION -r 
 
 
 # build catkin workspace
-RUN apt-get install -y dpkg
+# RUN apt-get install -y dpkg
 
+RUN apt-get update
+RUN apt-get install -y python-catkin-pkg
 
-#RUN dpkg -i python-catkin-pkg
-RUN dpkg -i python3-catkin-pkg-modules_0.4.5-1_all.deb
 
 
 
