--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -91,7 +91,7 @@ RUN apt-get install -y iputils-ping
 RUN echo "source /opt/ros/$ROS_VERSION/setup.bash" >> ~/.bashrc
 # RUN mkdir /catkin_ws/src
 WORKDIR /catkin_ws
-RUN . /opt/ros/$ROS_VERSION/setup.sh && catkin_make
+RUN . /opt/ros/$ROS_VERSION/setup.sh && catkin_make -j2
 
 # Initialize environment
 RUN chmod +x /catkin_ws/devel/setup.sh
