added raspian ros stretch image

--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -15,7 +15,7 @@ RUN mkdir /picam_data && chown pi /picam_data
 # Install Necessary Components and Utilities
 RUN apt-get update
 RUN apt-get install -y nano iputils-ping
-RUN apt-get install -y python python-pip
+RUN apt-get install -y python3 python3-pip
 RUN apt-get install -y python-opencv
 RUN mkdir /requirements
 WORKDIR /requirements
