--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -14,9 +14,9 @@ RUN mkdir /picam_data && chown pi /picam_data
 
 # Install Necessary Components and Utilities
 RUN apt-get update
-RUN apt-get install -y nano iputils-ping
 RUN apt-get install -y python3 python3-pip
 RUN apt-get install -y python-opencv
+RUN apt-get install python-picamera python3-picamera
 RUN mkdir /requirements
 WORKDIR /requirements
 COPY requirements.txt requirements.txt
