--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -17,7 +17,7 @@ RUN mkdir /picam_data && chown pi /picam_data
 # Install Necessary Components and Utilities
 RUN apt-get update
 RUN apt-get install -y python3 python3-pip
-RUN apt-get install -y python-opencv
+RUN apt-get install -y python3-opencv
 RUN apt-get install -y python-picamera python3-picamera
 RUN mkdir /requirements
 WORKDIR /requirements
