--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -17,8 +17,28 @@ RUN mkdir /picam_data && chown pi /picam_data
 # Install Necessary Components and Utilities
 RUN apt-get update
 RUN apt-get install -y python3 python3-pip
-RUN apt-get install -y python3-opencv
 RUN apt-get install -y python-picamera python3-picamera
+
+RUN mkdir /opencv
+WORKDIR /opencv
+RUN wget -O opencv.zip https://github.com/Itseez/opencv/archive/3.3.0.zip
+RUN unzip opencv.zip
+RUN rm -r opencv.zip
+
+RUN wget -O opencv_contrib.zip https://github.com/Itseez/opencv_contrib/archive/3.3.0.zip
+RUN unzip opencv_contrib.zip
+RUN rm -r opencv_contrib.zip
+
+WORKDIR /opencv/opencv-3.3.0
+RUN mkdir build
+WORKDIR build
+RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
+    -D CMAKE_INSTALL_PREFIX=/usr/local \
+    -D INSTALL_PYTHON_EXAMPLES=ON \
+    -D OPENCV_EXTRA_MODULES_PATH=~/opencv_contrib-3.3.0/modules \
+    -D BUILD_EXAMPLES=ON ..
+
+
 RUN mkdir /requirements
 WORKDIR /requirements
 COPY requirements.txt requirements.txt
