--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -19,6 +19,16 @@ RUN apt-get update
 RUN apt-get install -y python3 python3-pip
 RUN apt-get install -y python-picamera python3-picamera
 
+# Install OpenCV
+# https://www.pyimagesearch.com/2017/09/04/raspbian-stretch-install-opencv-3-python-on-your-raspberry-pi/
+RUN apt-get install libjpeg-dev libtiff5-dev libjasper-dev libpng12-dev
+RUN apt-get install libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
+RUN apt-get install libxvidcore-dev libx264-dev
+RUN apt-get install libgtk2.0-dev libgtk-3-dev
+RUN apt-get install libatlas-base-dev gfortran
+RUN apt-get install python2.7-dev python3-dev
+
+
 RUN mkdir /opencv
 WORKDIR /opencv
 RUN wget -O opencv.zip https://github.com/Itseez/opencv/archive/3.3.0.zip
@@ -37,6 +47,13 @@ RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
     -D INSTALL_PYTHON_EXAMPLES=ON \
     -D OPENCV_EXTRA_MODULES_PATH=~/opencv_contrib-3.3.0/modules \
     -D BUILD_EXAMPLES=ON ..
+RUN make -j2
+RUN make install
+RUN ldconfig
+WORKDIR /usr/local/lib/python3.5/site-packages/
+RUN mv cv2.cpython-35m-arm-linux-gnueabihf.so cv2.so
+WORKDIR /usr/lib/python3.5/site-packages/
+RUN ln -s /usr/local/lib/python3.5/site-packages/cv2.so cv2.so
 
 
 RUN mkdir /requirements
