--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -18,9 +18,7 @@ RUN sudo apt-get install -y dirmngr
 
 RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $DEBIAN_DISTRO main" > /etc/apt/sources.list.d/ros-latest.list'
 
-RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys 421C365BD9FF1F717815A3895523BAEEB01FA116 F42ED6FBAB17C654
-
-
+RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys 421C365BD9FF1F717815A3895523BAEEB01FA116 F42ED6FBAB17C654
 
 RUN apt-get install -y python-rosdep
 # RUN apt-get install -y python-rosdep libpaper1-
