--- a/picam_subscriber/Dockerfile
+++ b/picam_subscriber/Dockerfile
@@ -7,6 +7,10 @@
 
 FROM raspbian-ros
 
+# Install Necessary Components and Utilities
+RUN apt-get update
+RUN apt-get install -y python3 python3-pip
+
 # Import Python Dependencies and Requirements
 RUN mkdir /requirements
 WORKDIR /requirements
