added picam subscriber

--- a/opencv/Dockerfile
+++ b/opencv/Dockerfile
@@ -1,3 +1,6 @@
+# THIS SHOULD BE INSERTED IN ANOTHER DOCKERFILE
+# THIS IS NOT INTENDED TO BE BUILDABLE
+
 # Install OpenCV
 # https://www.pyimagesearch.com/2017/09/04/raspbian-stretch-install-opencv-3-python-on-your-raspberry-pi/
 RUN apt-get install -y libjpeg-dev libtiff5-dev libjasper-dev libpng12-dev
@@ -28,7 +31,7 @@ RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
 RUN make -j2
 RUN make install
 RUN ldconfig
-WORKDIR /usr/local/lib/python3.5/site-packages/
+WORKDIR /usr/local/lib/python3.6/site-packages/
 RUN mv cv2.cpython-35m-arm-linux-gnueabihf.so cv2.so
-WORKDIR /usr/lib/python3.5/site-packages/
-RUN ln -s /usr/local/lib/python3.5/site-packages/cv2.so cv2.so
+WORKDIR /usr/lib/python3.6/site-packages/
+RUN ln -s /usr/local/lib/python3.6/site-packages/cv2.so cv2.so
