added picam subscriber

--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -2,15 +2,22 @@
 # webserver
 # https://github.com/jacksonliam/mjpg-streamer
 
+# based docker build on:
+# https://github.com/sgtwilko/rpi-raspbian-opencv/blob/master/jessie/Dockerfile
+
 # Need to run container with the device: docker run -t -i -p 8080:8080/tcp --device=/dev/vchiq webserver
 # The stream can be viewed: http://pidev2.local:8080/?action=stream
 # http://pidev2.local:8080 shows various html options
 
-FROM raspbian/jessie
+ARG RASPBIAN_VERSION=jessie
+FROM raspbian/$RASPBIAN_VERSION
+
+ARG RASPBIAN_VERSION
+ARG DEBIAN_FRONTEND=noninteractive
 
 # Install Dependencies and Utilities
 RUN apt-get update
-RUN apt-get install -y git nano iputils-ping make cmake libjpeg8-dev gcc g++
+RUN apt-get install -y git nano unzip iputils-ping make cmake libjpeg8-dev gcc g++
 RUN apt-get install -y libraspberrypi-dev
 
 # Build mjpg_streamer
@@ -23,42 +30,71 @@ RUN make && make install && chmod +x docker-start.sh
 # OPENCV
 ##########
 
-# Install OpenCV
-# https://www.pyimagesearch.com/2017/09/04/raspbian-stretch-install-opencv-3-python-on-your-raspberry-pi/
-RUN apt-get install -y libjpeg-dev libtiff5-dev libjasper-dev libpng12-dev
-RUN apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
-RUN apt-get install -y libxvidcore-dev libx264-dev
-RUN apt-get install -y libgtk2.0-dev libpaper1- bsdmainutils- libpam-systemd-
-RUN apt-get install -y libatk-bridge2.0-dev libatspi2.0-dev libgtk-3-dev libpaper1- libpam-systemd-
-RUN apt-get install -y libatlas-base-dev gfortran
-RUN apt-get install -y python2.7-dev python3-dev
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends apt-utils \
+	# install necessary build tools \
+	&& apt-get -qy install build-essential cmake pkg-config unzip wget \
+	# install necessary libraries \
+	&& apt-get -qy install \
+		libjpeg-dev \
+		libtiff5-dev \
+		libjasper-dev \
+		libpng12-dev \
+		libavcodec-dev \
+		libavformat-dev \
+		libswscale-dev \
+		libv4l-dev \
+		libxvidcore-dev \
+		libx264-dev \
+		libgtk2.0-dev \
+		libgtk-3-dev \
+		libatlas-base-dev \
+		gfortran \
+		python2.7-dev \
+		python3-dev \
+		python-pip \
+		python-numpy \
+		python3-pip \
+		python3-numpy \
+		libraspberrypi0 \
+	# cleanup apt \
+	&& apt-get purge -y --auto-remove \
+	&& rm -rf /var/lib/apt/lists/*
 
-RUN mkdir /opencv
-WORKDIR /opencv
-RUN wget -O opencv.zip https://github.com/Itseez/opencv/archive/3.3.0.zip
-RUN apt-get install -y unzip
-RUN unzip opencv.zip
-RUN rm -r opencv.zip
 
-RUN wget -O opencv_contrib.zip https://github.com/Itseez/opencv_contrib/archive/3.3.0.zip
-RUN unzip opencv_contrib.zip
-RUN rm -r opencv_contrib.zip
+ARG OPENCV_VERSION=4.0.0
+ENV OPENCV_VERSION $OPENCV_VERSION
 
-WORKDIR /opencv/opencv-3.3.0
-RUN mkdir build
-WORKDIR build
-RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
-    -D CMAKE_INSTALL_PREFIX=/usr/local \
-    -D INSTALL_PYTHON_EXAMPLES=ON \
-    -D OPENCV_EXTRA_MODULES_PATH=/opencv/opencv_contrib-3.3.0/modules \
-    -D BUILD_EXAMPLES=ON ..
-RUN make -j2
-RUN make install
-RUN ldconfig
-WORKDIR /usr/local/lib/python3.6/site-packages/
-RUN mv cv2.cpython-35m-arm-linux-gnueabihf.so cv2.so
-WORKDIR /usr/lib/python3.6/site-packages/
-RUN ln -s /usr/local/lib/python3.6/site-packages/cv2.so cv2.so
+	# download latest source & contrib
+RUN	cd /tmp \
+	&& wget -c -N -nv -O opencv.zip https://github.com/opencv/opencv/archive/$OPENCV_VERSION.zip \
+	&& unzip opencv.zip \
+	&& wget -c -N -nv -O opencv_contrib.zip https://github.com/opencv/opencv_contrib/archive/$OPENCV_VERSION.zip \
+	&& unzip opencv_contrib.zip \
+	# build opencv \
+	&& cd /tmp/opencv-$OPENCV_VERSION \
+	&& mkdir build \
+	&& cd build \
+	&& cmake -D CMAKE_BUILD_TYPE=RELEASE \
+		-D CMAKE_INSTALL_PREFIX=/usr/local \
+		-D INSTALL_C_EXAMPLES=ON \
+		-D BUILD_PYTHON_SUPPORT=ON \
+		-D BUILD_NEW_PYTHON_SUPPORT=ON \
+		-D INSTALL_PYTHON_EXAMPLES=ON \
+		-D OPENCV_EXTRA_MODULES_PATH=/tmp/opencv_contrib-$OPENCV_VERSION/modules \
+		-D BUILD_EXAMPLES=ON .. \
+	&& make -j4  \
+	&& make \
+	&& make install\
+	# ldconfig && \
+	&& make clean \
+	# cleanup source \
+	&& cd / \
+	&& rm -rf /tmp/* \
+	&& pip install imutils picamera \
+	&& pip3 install imutils picamera \
+	&& date \
+	&& echo "Raspbian $RASPBIAN_VERSION - OpenCV $OPENCV_VERSION Docker Build finished."
 
 
 ##########
