--- a/opencv/Dockerfile
+++ b/opencv/Dockerfile
@@ -10,13 +10,15 @@
 RUN apt-get install -y libjpeg-dev libtiff5-dev libjasper-dev libpng12-dev
 RUN apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
 RUN apt-get install -y libxvidcore-dev libx264-dev
-RUN apt-get install -y libgtk2.0-dev libgtk-3-dev
+RUN apt-get install -y libgtk2.0-dev libpaper1- bsdmainutils- libpam-systemd-
+RUN apt-get install -y libatk-bridge2.0-dev libatspi2.0-dev libgtk-3-dev libpaper1- libpam-systemd-
 RUN apt-get install -y libatlas-base-dev gfortran
 RUN apt-get install -y python2.7-dev python3-dev
 
 RUN mkdir /opencv
 WORKDIR /opencv
 RUN wget -O opencv.zip https://github.com/Itseez/opencv/archive/3.3.0.zip
+RUN apt-get install -y unzip
 RUN unzip opencv.zip
 RUN rm -r opencv.zip
 
@@ -39,6 +41,7 @@ WORKDIR /usr/local/lib/python3.6/site-packages/
 RUN mv cv2.cpython-35m-arm-linux-gnueabihf.so cv2.so
 WORKDIR /usr/lib/python3.6/site-packages/
 RUN ln -s /usr/local/lib/python3.6/site-packages/cv2.so cv2.so
+
 
 ##########
 # END OPENCV
