--- a/picam_subscriber/Dockerfile
+++ b/picam_subscriber/Dockerfile
@@ -20,8 +20,8 @@ COPY requirements.txt requirements.txt
 RUN pip3 install --no-cache -r requirements.txt
 
 # Download YOYLv3 object detection database
-WORKDIR /catkin_ws/src/master_pkg/src/
-RUN wget -q https://github.com/OlafenwaMoses/ImageAI/releases/download/1.0/yolo.h5
+# WORKDIR /catkin_ws/src/master_pkg/src/
+# RUN wget -q https://github.com/OlafenwaMoses/ImageAI/releases/download/1.0/yolo.h5
 
 COPY pyfiles/ /catkin_ws/src/master_pkg/src/
 
