--- a/picam_subscriber/Dockerfile
+++ b/picam_subscriber/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get install -y python3 python3-pip
 RUN apt-get install -y libatlas-base-dev
 
 # Import Python Dependencies and Requirements
-RUN pip install -U tensorflow keras opencv-python
+RUN pip3 install -U tensorflow keras opencv-python
 RUN pip3 install imageai --upgrade
 RUN mkdir /requirements
 WORKDIR /requirements
