--- a/picam_subscriber/Dockerfile
+++ b/picam_subscriber/Dockerfile
@@ -19,7 +19,8 @@ WORKDIR /requirements
 COPY requirements.txt requirements.txt
 RUN pip3 install --no-cache -r requirements.txt
 
-RUN pip3 install https://storage.googleapis.com/tensorflow-nightly/tensorflow-1.10.0-cp34-none-linux_armv7l.whl
+RUN wget https://storage.googleapis.com/tensorflow-nightly/tensorflow-1.10.0-cp34-none-linux_armv7l.whl
+RUN pip3 install tensorflow-1.10.0-cp34-none-linux_armv7l.whl
 
 # Download YOYLv3 object detection database
 # WORKDIR /catkin_ws/src/master_pkg/src/
