--- a/picam_subscriber/Dockerfile
+++ b/picam_subscriber/Dockerfile
@@ -13,11 +13,15 @@ RUN apt-get install -y python3 python3-pip
 # needed for the deserialization of published arrays
 RUN apt-get install -y libatlas-base-dev
 
+# clean up installation files
+RUN  apt-get clean && \
+        rm -rf /var/lib/apt/lists/*
+
 # Import Python Dependencies and Requirements
 RUN mkdir /requirements
 WORKDIR /requirements
 COPY requirements.txt requirements.txt
-RUN pip3 install --no-cache -r requirements.txt
+RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY pyfiles/ /catkin_ws/src/master_pkg/src/
 
