--- a/object_counter/Dockerfile
+++ b/object_counter/Dockerfile
@@ -6,7 +6,7 @@ FROM rpi-docker-tensorflow
 
 #### Add ImageAI
 
-RUN pip install -U tensorflow keras opencv-python
+RUN pip install -U tensorflow keras opencv-python-headless
 RUN pip3 install imageai --upgrade
 
 ##### END ImageAI
