--- a/object_counter/Dockerfile
+++ b/object_counter/Dockerfile
@@ -7,7 +7,7 @@ FROM rpi-docker-tensorflow
 #### Add ImageAI
 
 RUN pip install --upgrade pip
-RUN pip install -U tensorflow keras opencv-python-headless
+RUN pip install -U tensorflow keras opencv-python
 RUN pip3 install imageai --upgrade
 
 ##### END ImageAI
