--- a/object_counter/Dockerfile
+++ b/object_counter/Dockerfile
@@ -9,7 +9,7 @@ FROM rpi-docker-tensorflow
 COPY pip.conf /etc/pip.conf
 
 RUN pip install --upgrade pip
-RUN pip install -U tensorflow 
+# RUN pip install -U tensorflow 
 RUN pip install -U keras
 RUN pip install -U opencv-python
 RUN pip3 install imageai --upgrade
