--- a/object_counter/Dockerfile
+++ b/object_counter/Dockerfile
@@ -6,11 +6,15 @@ FROM rpi-docker-tensorflow
 
 #### Add ImageAI
 
-COPY pip.conf /etc/pip.conf
+# Create a pip.conf file that will allow pinwheels.org to be searched for whl
+# files if they do not exist in the default python search location
+
 
 RUN pip install --upgrade pip
 # RUN pip install -U tensorflow 
 RUN pip install -U keras
+
+COPY pip.conf /etc/pip.conf
 RUN pip install -U opencv-python
 RUN pip3 install imageai --upgrade
 
